# presentation

./: .gitignore
lab/: main.typ
lab/0515/examples/: computation_graph  pyproject.toml  requirements.txt
lab/0515/examples/src/autograd/: computational_graph.py  diff_tensor.py  ex1.py  ex2.py  ex3.py  no_grad.py
lab/0515/examples/src/homework/: my_tensor.py
lab/0515/examples/src/train/: training_ex.py
lab/0515/slide/: main.typ
lab/0515/slide/templates/: metadata.typ  template.typ
lab/templates/: metadata.typ
