[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = ""
authors = ["WShohei"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
torch = "^2.3.0"
numpy = "^1.26.4"
tensorboard = "^2.16.2"
torchviz = "^0.0.2"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
